--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Maniots Portfolio</title>
     <meta name="description" content="Professional Porfolio by Maniots" />
     <meta name="author" content="Manuel Rizzo aka Maniots" />
-    <link rel=" shortcut icon" href="\public\favicon.ico?v=1" />
+    <link rel="shortcut icon" href="https://maniots.github.io/maniotsportfolio-v2/favicon.ico" />
 
     <meta property="og:title" content="Maniots Portfolio" />
     <meta property="og:description" content="Professional Porfolio by Maniots" />
